# pcm2mp3-old

./: .cproject  LICENSE  MANIFEST.in  README.rst  enums.pl  makefile  mp3  setup.cfg  setup.py  test.pl  test.py  test.sh
cpp/: AudioFile.cpp  AudioFile.hpp  Exception.cpp  Lame.cpp  Lame.hpp  MP3Object.cpp  MP3Object.hpp  MP3TestObject.cpp  MP3TestObject.hpp  Module.cpp  PCMObject.cpp  PCMObject.hpp  PException.hpp  PyHeader.cpp  PyHeader.hpp  Quality.cpp  Rates.cpp
cpp.mp3/: MP3.cpp  MP3.hpp  MP3File.cpp  MP3File.hpp  MP3Frame.cpp  mp3.cpp  mp3info.hpp
cpp/lib/: AIFFData.cpp  AIFFData.hpp  AIFFFile.cpp  AIFFFile.hpp  Conversions.cpp  Conversions.hpp  DataChunk.cpp  DataChunk.hpp  Enumerated.cpp  Enumerated.hpp  Form.cpp  Form.hpp  Iterator32.cpp  Iterator32.hpp  MP3Data.cpp  MP3Data.hpp  MP3Encoder.cpp  MP3Encoder.hpp  MP3File.cpp  MP3File.hpp  Options.cpp  Options.hpp  PCMData.cpp  PCMData.hpp  PCMFile.cpp  PCMFile.hpp  WAVFile.cpp  WAVFile.hpp  base.cpp  base.hpp  enum.hpp  enums.cpp  enums.hpp  lamer.cpp  main.cpp  property.cpp  property.hpp  transcoder.cpp  transcoder.hpp
cpp/test/: CRC16.cpp  CRC16.hpp  MP3.cpp  MP3.hpp  MP3File.cpp  MP3File.hpp  MP3Frame.cpp  MP3Frame.hpp  Test.cpp  Test.hpp  mp3.cpp  mp3check.cpp  mp3info.hpp
tests/testTranscoder/: __init__.py  test.py
utils/: __init__.py  checkForLibs.py
wav2mp3/: __init__.py
