[metadata]
name = wav2mp3
version = 1.6
description = Utility to convert WAV files to MP3 files
long_description = file: README.rst

author = Julian Porter
author_email = julian@jpembedded.solution
license = BSD 3-clause
keywords = 
	WAV
	MP3
	transcode
	LAME
classifiers =

[options]
zip_safe = True
include_package_data = True
packages = 
	wav2mp3

